--- a/calculator/style.css
+++ b/calculator/style.css
@@ -40,14 +40,10 @@
 	border: 2px solid black;
 	font-size: var(--fs-900);
 	line-height: 1.5;
-	text-align: end;
 	padding: 0 0.15em 0 0;
-	direction: rtl;
 	
 	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: clip;
-	user-select: none;
+	overflow
 }
 
 /* Chrome, Safari, Edge, Opera */
