--- a/calculator/style.css
+++ b/calculator/style.css
@@ -65,11 +65,25 @@
 	width: 100%;
 	height: 1em;
 	padding: 0.1em;
-	
 	display: flex;
-	overflow: hidden;
+	overflow-x: auto;
+	overflow-y: hidden;
 	align-items: center;
 	justify-content: right;
+}
+
+.calc__display::-webkit-scrollbar {
+	width: 6px;
+	height: 6px;
+}
+
+.calc__display::-webkit-scrollbar-thumb {
+	background-color: #888;
+	border-radius: 3px;
+}
+
+.calc__display::-webkit-scrollbar-track {
+	background-color: #eee;
 }
 
 .calc__buttons-section {
